--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/graphics/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/graphics/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PoliSee</title>
-  <script type="module" crossorigin src="/assets/index.52c3239e.js"></script>
+  <script type="module" crossorigin src="/assets/index.1a4682f0.js"></script>
   <link rel="stylesheet" href="/assets/index.c336724f.css">
 </head>
 
